force-app/main/default/objects/Manage_Users_Log__c/Manage_Users_Log__c.object-meta.xml
<CustomObject>
    <description>Logs for Manage Users automations,
PRD: https://docs.google.com/document/d/1L2NtEfWzvR9L8EdccQNR9jf1R34oiWkhlTouKkb2pCk/edit?usp=sharing</description>
    <label>Manage Users Log</label>
    <nameField>
        <displayFormat>MU-{0000}</displayFormat>
        <label>Manage Users Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manage Users Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>