force-app/main/default/objects/Manage_Users_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The Action requested in the process</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deactivate</fullName>
                <default>true</default>
                <label>Deactivate</label>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Role Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>