force-app/main/default/objects/Manage_Users_Log__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requests that require approval from someone other than the requester.</description>
    <inlineHelpText>Can be approved only by someone other than the requester.</inlineHelpText>
    <label>Approved?</label>
    <type>Checkbox</type>
</CustomField>