force-app/main/default/objects/Manage_Users_Log__c/fields/Business_Applications_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Business_Applications_Assignments__c</fullName>
    <label>Business Applications Assignments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>