force-app/main/default/objects/Manage_Users_Log__c/fields/Channel_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager_Id__c</fullName>
    <label>Channel Manager Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>