force-app/main/default/objects/Manage_Users_Log__c/fields/Chorus__c.field-meta.xml
<CustomField>
    <fullName>Chorus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chorus</label>
    <type>Checkbox</type>
</CustomField>