force-app/main/default/objects/Manage_Users_Log__c/fields/Clone_Package_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Clone_Package_Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-5035 Determine whether to duplicate all Package License from an existing User.</description>
    <label>Clone Package Licenses</label>
    <type>Checkbox</type>
</CustomField>