force-app/main/default/objects/Manage_Users_Log__c/fields/Clone_Permission_Set_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Clone_Permission_Set_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine whether to duplicate all Permission Sets from an existing User.</description>
    <label>Clone Permission Set Assignments</label>
    <type>Checkbox</type>
</CustomField>