force-app/main/default/objects/Manage_Users_Log__c/fields/Clone_Public_Group_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Clone_Public_Group_Memberships__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine whether to duplicate all Public Groups from an existing User.</description>
    <label>Clone Public Group Memberships</label>
    <type>Checkbox</type>
</CustomField>