force-app/main/default/objects/Manage_Users_Log__c/fields/Date_For_Action__c.field-meta.xml
<CustomField>
    <fullName>Date_For_Action__c</fullName>
    <description>The requested date to run the action.</description>
    <inlineHelpText>The requested date to run the action.</inlineHelpText>
    <label>Date For Action</label>
    <type>Date</type>
</CustomField>