force-app/main/default/objects/Manage_Users_Log__c/fields/Deactivate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Reason__c</fullName>
    <label>Deactivate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End of Employment</fullName>
                <default>true</default>
                <label>End of Employment</label>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Lack of Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>