force-app/main/default/objects/Manage_Users_Log__c/fields/Description_for_Fixing_Failure__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Fixing_Failure__c</fullName>
    <description>In case the status is changed from Failure to another status</description>
    <inlineHelpText>Please describe the actions taken to resolve the problem.</inlineHelpText>
    <label>Description for Fixing Failure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>