force-app/main/default/objects/Manage_Users_Log__c/fields/Employee_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Hire_Date__c</fullName>
    <label>Employee Hire Date</label>
    <type>Date</type>
</CustomField>