force-app/main/default/objects/Manage_Users_Log__c/fields/Fault_Massage__c.field-meta.xml
<CustomField>
    <fullName>Fault_Massage__c</fullName>
    <description>In case the automation for the action failed, save the reason for the failure</description>
    <label>Fault Massage</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>