force-app/main/default/objects/Manage_Users_Log__c/fields/Linkedin_Sales_Navigator_LISN__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Sales_Navigator_LISN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linkedin Sales Navigator LISN</label>
    <type>Checkbox</type>
</CustomField>