force-app/main/default/objects/Manage_Users_Log__c/fields/Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Manager_Id__c</fullName>
    <label>Manager Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>