force-app/main/default/objects/Manage_Users_Log__c/fields/Parent_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Role_ID__c</fullName>
    <label>Parent Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>