force-app/main/default/objects/Manage_Users_Log__c/fields/Parent_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Role_Name__c</fullName>
    <label>Parent Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>