force-app/main/default/objects/Manage_Users_Log__c/fields/Permission_Set_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Assignments__c</fullName>
    <label>Permission Set Assignments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>