force-app/main/default/objects/Manage_Users_Log__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>Profile Requested for the User</description>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>