force-app/main/default/objects/Manage_Users_Log__c/fields/Public_Group_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Assignments__c</fullName>
    <label>Public Group Assignments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>