force-app/main/default/objects/Manage_Users_Log__c/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <description>Get Role ID from User Management Screen Flow</description>
    <label>Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>