force-app/main/default/objects/Manage_Users_Log__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>Role Requested for the User</description>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>