force-app/main/default/objects/Manage_Users_Log__c/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <description>MIS-8472</description>
    <label>Role Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>