force-app/main/default/objects/Manage_Users_Log__c/fields/SalesLoft__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SalesLoft</label>
    <type>Checkbox</type>
</CustomField>