force-app/main/default/objects/Manage_Users_Log__c/fields/Source_User_to_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Source_User_to_Duplicate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected User to clone all the details of the New/Updated User</description>
    <label>Source User to Duplicate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manage_Users_Logs_Cloned_To</relationshipName>
    <type>Lookup</type>
</CustomField>