force-app/main/default/objects/Manage_Users_Log__c/fields/Sub_Divison__c.field-meta.xml
<CustomField>
    <fullName>Sub_Divison__c</fullName>
    <label>Sub Divison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>