force-app/main/default/objects/Manage_Users_Log__c/fields/Time_Zone_SidKey__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_SidKey__c</fullName>
    <label>Time Zone SidKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>