force-app/main/default/objects/Manage_Users_Log__c/fields/Today_is_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_is_Action_Date__c</fullName>
    <formula>TODAY() =  Date_For_Action__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today is Action Date</label>
    <type>Checkbox</type>
</CustomField>