force-app/main/default/objects/Manage_Users_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User that needs to be updated</description>
    <inlineHelpText>The User that needs to be updated</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manage_Users_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>