force-app/main/default/objects/Manage_Users_Log__c/fields/User_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>User_Business_Unit__c</fullName>
    <description>MIS-4524</description>
    <label>User Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>