force-app/main/default/objects/Manage_Users_Log__c/validationRules/Fill_in_Description_in_Case_Of_Failure.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_in_Description_in_Case_Of_Failure</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Status__c ) 
&amp;&amp;
TEXT(PRIORVALUE(Status__c)) = &apos;Failed&apos;
&amp;&amp;
LEN( Description_for_Fixing_Failure__c ) = 0</errorConditionFormula>
    <errorDisplayField>Description_for_Fixing_Failure__c</errorDisplayField>
    <errorMessage>Please fill in the Description for the steps taken to solve the failure.</errorMessage>
</ValidationRule>