force-app/main/default/objects/Manage_Users_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approved_By__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Description_for_Fixing_Failure__c</columns>
    <columns>First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>