force-app/main/default/objects/Manage_Users_Log__c/listViews/Completed_create.listView-meta.xml
<ListView>
    <fullName>Completed_create</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Approved_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Create</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed create</label>
</ListView>