force-app/main/default/objects/Manage_Users_Log__c/listViews/Deactivate_Users_Open_Requests.listView-meta.xml
<ListView>
    <fullName>Deactivate_Users_Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Deactivate_Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Date_For_Action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Failed</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Deactivate</value>
    </filters>
    <label>Deactivate Users - Open Requests</label>
</ListView>