force-app/main/default/objects/Manage_Users_Log__c/listViews/Failed_Logs.listView-meta.xml
<ListView>
    <fullName>Failed_Logs</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Logs</label>
</ListView>